--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ before_install:
   # Install the rest of tools (e.g., avdmanager)
   - sdkmanager tools
   # Install the system image
-  - sdkmanager "system-images;android-23;default;x86_64"
+  - sdkmanager "system-images;android-23;google_apis;x86_64"
   # Create and start emulator for the script. Meant to race the install task.
-  - echo no | avdmanager create avd --force -n test -k "system-images;android-23;default;x86_64"
+  - echo no | avdmanager create avd --force -n test -k "system-images;android-23;google_apis;x86_64"
   - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
 
 install: ./gradlew clean assemble assembleAndroidTest --stacktrace
