--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - pip install --user codecov
   # Install SDK license so Android Gradle plugin can install deps.
   - mkdir "$ANDROID_HOME/licenses" || true
-  - echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+  - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-license"
   # Install the rest of tools (e.g., avdmanager)
   - sdkmanager tools
   # Install the system image
@@ -22,11 +22,13 @@ before_install:
   - echo no | avdmanager create avd --force -n test -k "system-images;android-25;google_apis;armeabi-v7a"
   - $ANDROID_HOME/emulator/emulator -avd test -no-skin -no-audio -no-window &
 
+install: ./gradlew clean assemble assembleAndroidTest --stacktrace
+
 before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82
 
-script: ./gradlew clean check connectedCheck --stacktrace
+script: ./gradlew check connectedCheck --stacktrace
 
 after_success:
   - .buildscript/deploy_snapshot.sh
