--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,18 @@ before_install:
   # Install the system image
   - sdkmanager "system-images;android-24;google_apis;armeabi-v7a"
   # Create and start emulator for the script. Meant to race the install task.
-  - echo no | avdmanager create avd --force -n test -k "system-images;android-24;google_apis;armeabi-v7a"
-  - $ANDROID_HOME/emulator/emulator -avd test -no-skin -no-audio -no-window &
+  - echo no | avdmanager create avd -n acib -k "system-images;android-24;google_apis;armeabi-v7a -f --abi "armeabi-v7a" --tag "google_apis"
+  - $ANDROID_HOME/emulator/emulator -avd acib -engine classic -no-window -camera-back none -camera-front none -verbose -qemu -m 512 &
 
 install: ./gradlew clean assemble assembleAndroidTest --stacktrace
 
 before_script:
   - android-wait-for-emulator
-  - adb shell input keyevent 82
+  - adb shell settings put global window_animation_scale 0 &
+  - adb shell settings put global transition_animation_scale 0 &
+  - adb shell settings put global animator_duration_scale 0 &
+  - sleep 30
+  - adb shell input keyevent 82 &
 
 script: ./gradlew check connectedCheck --stacktrace
 
