--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 GROUP=com.vanniktech
-VERSION_NAME=0.2.0-SNAPSHOT
-VERSION_CODE=1
+VERSION_NAME=0.2.0
+VERSION_CODE=2
 
 POM_DESCRIPTION=Reactive permissions for Android
 
