Ignore AutoValue annotation when proguarding.

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -16,6 +16,14 @@ android {
     sourceCompatibility JavaVersion.VERSION_1_7
     targetCompatibility JavaVersion.VERSION_1_7
   }
+  buildTypes {
+    release {
+      minifyEnabled true
+      zipAlignEnabled true
+      shrinkResources true
+      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    }
+  }
 }
 
 dependencies {
