--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ codeQualityTools {
     toolVersion = '6.0.1'
   }
   detekt {
-    toolVersion = '1.0.0.RC6'
+    toolVersion = '1.0.0.RC6-2'
   }
   ktlint {
     toolVersion = '0.14.0'
