--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.vanniktech
-VERSION_NAME=0.3.0
+VERSION_NAME=0.4.0-SNAPSHOT
 VERSION_CODE=3
 
 POM_DESCRIPTION=Reactive permissions for Android
