Correctly wait now in connectedCheck phase.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,7 @@ before_install:
   - echo no | avdmanager create avd -n acib -k "system-images;android-24;google_apis;armeabi-v7a" -f --abi "armeabi-v7a" --tag "google_apis"
   - $ANDROID_HOME/emulator/emulator -avd acib -engine classic -no-boot-anim -noaudio -camera-back none -camera-front none -verbose -qemu -m 512 &
 
-install:
-  - travis_wait 30 mvn install
-  - ./gradlew clean assemble assembleAndroidTest --stacktrace
+install: ./gradlew clean assemble assembleAndroidTest --stacktrace
 
 before_script:
   - android-wait-for-emulator
@@ -28,7 +26,7 @@ before_script:
   - sleep 30
   - adb shell input keyevent 82 &
 
-script: ./gradlew check connectedCheck --stacktrace
+script: travis_wait 30 ./gradlew check connectedCheck --stacktrace
 
 after_success:
   - .buildscript/deploy_snapshot.sh
