--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,20 @@
 language: android
 
-android:
-  components:
-    - tools
-    - platform-tools
-
 jdk:
   - oraclejdk8
 
-before_script:
+before_install:
+  # Install SDK license so Android Gradle plugin can install deps.
   - mkdir "$ANDROID_HOME/licenses" || true
   - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-license"
-
-before_install:
-  - pip install --user codecov
 
 install: true
 
 script: ./gradlew clean build
 
 after_success:
+  - bash <(curl -s https://codecov.io/bash)
   - .buildscript/deploy_snapshot.sh
-  - codecov
 
 env:
   global:
@@ -37,7 +30,11 @@ notifications:
 
 sudo: false
 
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 cache:
   directories:
-    - $HOME/.gradle
-    - $HOME/.m2
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
