Use Gradle Maven Publish Plugin for publishing.

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,6 @@ buildscript {
 
   repositories {
     mavenCentral()
-    jcenter()
     google()
     gradlePluginPortal()
   }
@@ -52,6 +51,7 @@ buildscript {
   dependencies {
     classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.10.0'
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.11.0'
+    classpath 'com.vanniktech:gradle-maven-publish-plugin:0.1.0'
 
     classpath 'com.android.tools.build:gradle:3.1.0'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
@@ -78,8 +78,8 @@ subprojects {
 
   repositories {
     mavenCentral()
-    jcenter()
     google()
+    jcenter()
   }
 
   group = GROUP
