--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 GROUP=com.vanniktech
-VERSION_NAME=0.4.0-SNAPSHOT
-VERSION_CODE=3
+VERSION_NAME=0.4.0
+VERSION_CODE=4
 
 POM_DESCRIPTION=Reactive permissions for Android
 
