--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.vanniktech
-VERSION_NAME=0.5.0
+VERSION_NAME=0.6.0-SNAPSHOT
 VERSION_CODE=5
 
 POM_DESCRIPTION=Reactive permissions for Android
