--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,6 @@ POM_LICENCE_DIST=repo
 
 POM_DEVELOPER_ID=vanniktech
 POM_DEVELOPER_NAME=Niklas Baudy
+
+android.enableR8=true
+android.suppressUnsupportedOptionWarnings=android.suppressUnsupportedOptionWarnings,android.enableR8
