--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
       android:fullBackupContent="false"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
-      android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+      android:theme="@style/AppTheme"
       tools:ignore="GoogleAppIndexingWarning">
     <activity
-        android:name="com.vanniktech.rxpermission.sample.MainActivity"
+        android:name=".MainActivity"
         android:label="@string/app_name"
         >
       <intent-filter>
