--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 GROUP=com.vanniktech
-VERSION_NAME=0.6.0-SNAPSHOT
-VERSION_CODE=5
+VERSION_NAME=0.6.0
+VERSION_CODE=6
 
 POM_DESCRIPTION=Reactive permissions for Android
 
