Migrate to AndroidX (#56)

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ POM_DEVELOPER_NAME=Niklas Baudy
 
 android.enableR8=true
 android.suppressUnsupportedOptionWarnings=android.suppressUnsupportedOptionWarnings,android.enableR8
+android.useAndroidX=true
