--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,12 @@ apply plugin: 'com.vanniktech.android.junit.jacoco'
 buildscript {
   ext.versions = [
     minSdk: 14,
-    compileSdk: 27,
+    compileSdk: 28,
     targetSdk: 27,
-    supportLibrary: '27.1.1',
-    espresso: '3.0.2',
-    testRules: '1.0.2',
+    appcompat: '1.0.0',
+    espresso: '3.1.0',
+    testRules: '1.1.0',
+    junitExt: '1.0.0',
     autoValue: '1.6.2',
   ]
 
@@ -22,17 +23,19 @@ buildscript {
       'runtime': "com.google.auto.value:auto-value-annotations:${versions.autoValue}",
     ],
     'support': [
-      'appCompat': "com.android.support:appcompat-v7:${versions.supportLibrary}",
+      'appCompat': "androidx.appcompat:appcompat:${versions.appcompat}",
 
       'test': [
         'espresso': [
-          'core': "com.android.support.test.espresso:espresso-core:${versions.espresso}",
-          'web': "com.android.support.test.espresso:espresso-web:${versions.espresso}",
-          'intents': "com.android.support.test.espresso:espresso-intents:${versions.espresso}",
+          'core': "androidx.test.espresso:espresso-core:${versions.espresso}",
+          'web': "androidx.test.espresso:espresso-web:${versions.espresso}",
+          'intents': "androidx.test.espresso:espresso-intents:${versions.espresso}",
         ],
-        'runner': "com.android.support.test:runner:${versions.testRules}",
-        'rules': "com.android.support.test:rules:${versions.testRules}",
-        'uiautomator': 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3',
+
+        'runner': "androidx.test:runner:${versions.testRules}",
+        'junitExt': "androidx.test.ext:junit:${versions.junitExt}",
+        'rules': "androidx.test:rules:${versions.testRules}",
+        'uiautomator': 'androidx.test.uiautomator:uiautomator:2.2.0',
       ],
     ],
     'test': [
@@ -49,7 +52,7 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.13.0'
+    classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.14.0'
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.13.0'
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.6.0'
 
