Explicitly disable Jetifier.

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,7 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=vanniktech
 POM_DEVELOPER_NAME=Niklas Baudy
 
-android.enableR8=true
 android.suppressUnsupportedOptionWarnings=android.suppressUnsupportedOptionWarnings,android.enableR8
+android.enableR8=true
 android.useAndroidX=true
+android.enableJetifier=false # We don't have any dependency to non AndroidX components.
