--- a/circle.yml
+++ b/circle.yml
@@ -32,3 +32,5 @@ jobs:
       - run:
           name: Instrumentation testing
           command: ./gradlew connectedCheck
+      - store_test_results:
+          path: library/build/reports
