Separate testing infrastructure into it's own module.

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-  implementation project(':library')
+  implementation project(':rxpermission')
 
   implementation deps.support.appCompat
 }
