Target 29 & add test for location background permission.

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@ POM_DEVELOPER_NAME=Niklas Baudy
 android.suppressUnsupportedOptionWarnings=android.suppressUnsupportedOptionWarnings,android.enableR8
 android.enableR8=true
 android.useAndroidX=true
-android.enableJetifier=false # We don't have any dependency to non AndroidX components.
+android.enableJetifier=false
