--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ apply plugin: 'com.vanniktech.android.junit.jacoco'
 buildscript {
   ext.versions = [
     minSdk: 14,
-    compileSdk: 28,
-    targetSdk: 28,
+    compileSdk: 29,
+    targetSdk: 29,
     autoValue: '1.6.3',
     espresso: '3.1.1',
     testRules: '1.1.1',
@@ -38,7 +38,7 @@ buildscript {
     ],
     'test': [
       'mockito': 'org.mockito:mockito-core:2.24.5',
-      'junit': 'junit:junit:4.13-beta-2',
+      'junit': 'junit:junit:4.13',
       'assertj3': 'org.assertj:assertj-core:3.12.0',
     ],
   ]
@@ -50,11 +50,11 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.3.1'
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
+    classpath 'com.android.tools.build:gradle:3.6.2'
+    classpath 'com.github.ben-manes:gradle-versions-plugin:0.28.0'
 
-    classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.17.0'
-    classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.12.0'
+    classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.20.0'
+    classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.16.0'
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.8.0'
 
   }
@@ -86,6 +86,6 @@ subprojects {
 }
 
 wrapper {
-  gradleVersion = '5.2.1'
+  gradleVersion = '6.3'
   distributionType = Wrapper.DistributionType.ALL
 }
