--- a/rxpermission/src/androidTest/AndroidManifest.xml
+++ b/rxpermission/src/androidTest/AndroidManifest.xml
@@ -5,6 +5,8 @@
   <uses-permission android:name="android.permission.CAMERA"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+  <uses-permission android:name="android.permission.CALL_PHONE"/>
+  <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
   <uses-sdk tools:overrideLibrary="androidx.test.uiautomator,android_libs.ub_uiautomator"/>
 
