--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -10,11 +10,14 @@ android {
     targetSdkVersion versions.targetSdk
     versionCode = VERSION_CODE
     versionName = VERSION_NAME
+
+    multiDexEnabled true
   }
 
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_7
-    targetCompatibility JavaVersion.VERSION_1_7
+    coreLibraryDesugaringEnabled true
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
   }
   buildTypes {
     release {
@@ -30,4 +33,6 @@ dependencies {
   implementation project(':rxpermission')
 
   implementation deps.support.appCompat
+
+  coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 }
