Update gradle-maven-publish-plugin to 0.16.0

--- a/rxpermission/build.gradle
+++ b/rxpermission/build.gradle
@@ -1,9 +1,5 @@
 apply plugin: 'com.android.library'
 
-afterEvaluate {
-  generateReleaseBuildConfig.enabled = false
-}
-
 android {
   compileSdkVersion versions.compileSdk
 
@@ -15,6 +11,10 @@ android {
     consumerProguardFiles 'proguard-rules.txt'
 
     testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+  }
+
+  buildFeatures {
+    buildConfig = false
   }
 
   resourcePrefix 'rx_permission_'
