--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Install JDK 8
         uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: 1.8
 
       - name: Upload release
