--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,5 @@
 GROUP=com.vanniktech
 VERSION_NAME=0.8.0-SNAPSHOT
-VERSION_CODE=7
 
 POM_DESCRIPTION=Reactive permissions for Android
 
@@ -20,3 +19,9 @@ android.suppressUnsupportedOptionWarnings=android.suppressUnsupportedOptionWarni
 android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=false
+
+android.defaults.buildfeatures.buildconfig=false
+android.defaults.buildfeatures.aidl=false
+android.defaults.buildfeatures.renderscript=false
+android.defaults.buildfeatures.resvalues=false
+android.defaults.buildfeatures.shaders=false
