--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,12 @@
-apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'com.vanniktech.code.quality.tools'
-apply plugin: 'com.vanniktech.android.junit.jacoco'
 
 buildscript {
   ext.versions = [
     minSdk: 14,
-    compileSdk: 29,
-    targetSdk: 29,
+    compileSdk: 31,
+    targetSdk: 31,
     autoValue: '1.6.3',
-    espresso: '3.1.1',
+    espresso: '3.4.0',
     testRules: '1.1.1',
   ]
 
@@ -21,7 +19,8 @@ buildscript {
       'runtime': "com.google.auto.value:auto-value-annotations:${versions.autoValue}",
     ],
     'support': [
-      'appCompat': "androidx.appcompat:appcompat:1.2.0",
+      'appCompat': "androidx.appcompat:appcompat:1.4.1",
+      'annotation': "androidx.annotation:annotation:1.3.0",
 
       'test': [
         'espresso': [
@@ -50,31 +49,31 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:4.2.1'
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.38.0'
-
-    classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.20.0'
-    classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.16.0'
-    classpath 'com.vanniktech:gradle-maven-publish-plugin:0.16.0'
+    classpath 'com.android.tools.build:gradle:7.2.1'
+    classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.21.0'
+    classpath 'com.vanniktech:gradle-maven-publish-plugin:0.19.0'
 
   }
 }
 
 codeQualityTools {
   checkstyle {
-    toolVersion = '8.7'
+    enabled = false
   }
   pmd {
-    toolVersion = '6.0.1'
-  }
-  errorProne {
-    toolVersion = '2.3.1'
+    enabled = false
   }
   cpd {
     enabled = false
   }
   lint {
     textReport = true
+  }
+  detekt {
+    enabled = false
+  }
+  ktlint {
+    version = "0.45.2"
   }
 }
 
@@ -89,6 +88,6 @@ subprojects {
 }
 
 wrapper {
-  gradleVersion = '6.8.3'
+  gradleVersion = '7.4.2'
   distributionType = Wrapper.DistributionType.ALL
 }
