--- a/rxpermission-testing/build.gradle
+++ b/rxpermission-testing/build.gradle
@@ -1,10 +1,8 @@
 apply plugin: 'com.android.library'
 
-afterEvaluate {
-  generateReleaseBuildConfig.enabled = false
-}
-
 android {
+  namespace = "com.vanniktech.rxpermission.testing"
+
   compileSdkVersion versions.compileSdk
 
   defaultConfig {
@@ -14,8 +12,8 @@ android {
   resourcePrefix 'rx_permission_testing_'
 
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_7
-    targetCompatibility JavaVersion.VERSION_1_7
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
   }
 }
 
