--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
+  namespace "com.vanniktech.rxpermission.sample"
+
   compileSdkVersion versions.compileSdk
 
   defaultConfig {
@@ -8,13 +10,13 @@ android {
     minSdkVersion versions.minSdk
 
     targetSdkVersion versions.targetSdk
-    versionCode = VERSION_CODE
+    versionCode = 1
     versionName = VERSION_NAME
   }
 
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_7
-    targetCompatibility JavaVersion.VERSION_1_7
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
   }
 
   buildTypes {
