Downgrade to AGP 7.1.3

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,8 @@ android.defaults.buildfeatures.aidl=false
 android.defaults.buildfeatures.renderscript=false
 android.defaults.buildfeatures.resvalues=false
 android.defaults.buildfeatures.shaders=false
+
+SONATYPE_HOST=DEFAULT
+RELEASE_SIGNING_ENABLED=true
+
+org.gradle.jvmargs=-Xmx2048m
