Add licensee plugin for License verification.

--- a/rxpermission-testing/build.gradle
+++ b/rxpermission-testing/build.gradle
@@ -1,4 +1,13 @@
+plugins {
+  id("app.cash.licensee")
+}
+
 apply plugin: 'com.android.library'
+
+licensee {
+  allow("Apache-2.0")
+  allow("CC0-1.0")
+}
 
 android {
   namespace = "com.vanniktech.rxpermission.testing"
