--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ buildscript {
     classpath 'com.android.tools.build:gradle:7.2.1'
     classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.21.0'
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.20.0'
-
+    classpath 'app.cash.licensee:licensee-gradle-plugin:1.4.1'
   }
 }
 
