Add Dependency Guard plugin.

--- a/rxpermission-testing/build.gradle
+++ b/rxpermission-testing/build.gradle
@@ -1,5 +1,6 @@
 plugins {
   id("app.cash.licensee")
+  id("com.dropbox.dependency-guard")
 }
 
 apply plugin: 'com.android.library'
@@ -7,6 +8,12 @@ apply plugin: 'com.android.library'
 licensee {
   allow("Apache-2.0")
   allow("CC0-1.0")
+}
+
+dependencyGuard {
+  configuration("releaseRuntimeClasspath") {
+    tree = true
+  }
 }
 
 android {
