--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,4 +1,14 @@
+plugins {
+  id("com.dropbox.dependency-guard")
+}
+
 apply plugin: 'com.android.application'
+
+dependencyGuard {
+  configuration("releaseRuntimeClasspath") {
+    tree = true
+  }
+}
 
 android {
   namespace "com.vanniktech.rxpermission.sample"
