--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,6 @@ buildscript {
     targetSdk: 33,
     autoValue: '1.10.1',
     espresso: '3.5.0',
-    testRules: '1.1.1',
   ]
 
   ext.deps = [
@@ -30,8 +29,8 @@ buildscript {
         ],
 
         'junitExt': "androidx.test.ext:junit:1.1.4",
-        'runner': "androidx.test:runner:${versions.testRules}",
-        'rules': "androidx.test:rules:${versions.testRules}",
+        'runner': "androidx.test:runner:1.5.1",
+        'rules': "androidx.test:rules:1.5.0",
         'uiautomator': 'androidx.test.uiautomator:uiautomator:2.2.0',
       ],
     ],
