--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,4 +1,13 @@
-apply plugin: 'com.android.application'
+plugins {
+  id("com.android.application")
+  id("org.jetbrains.kotlin.android")
+}
+
+kotlin {
+  jvmToolchain {
+    languageVersion.set(JavaLanguageVersion.of(11))
+  }
+}
 
 android {
   namespace "com.vanniktech.rxpermission.sample"
@@ -15,8 +24,8 @@ android {
   }
 
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+    sourceCompatibility JavaVersion.VERSION_11
+    targetCompatibility JavaVersion.VERSION_11
   }
 
   buildTypes {
