--- a/.editorconfig
+++ b/.editorconfig
@@ -9,4 +9,8 @@ ktlint_standard_annotation=disabled
 ktlint_standard_max-line-length=disabled
 ktlint_standard_filename=disabled
 ktlint_standard_spacing-between-declarations-with-annotations=disabled
+ktlint_standard_blank-line-between-when-conditions=disabled
+ktlint_standard_backing-property-naming=disabled
+ktlint_standard_kdoc=disabled
+ktlint_standard_condition-wrapping=disabled
 ktlint_experimental=enabled
